--- a/ansible-chatbot-run.yaml
+++ b/ansible-chatbot-run.yaml
@@ -109,8 +109,8 @@ models:
   provider_id: rhosai_vllm_dev
   provider_model_id: null
 - metadata:
-    embedding_dimension: 384
-  model_id: all-MiniLM-L6-v2
+    embedding_dimension: 768
+  model_id: ${env.EMBEDDING_MODEL:all-mpnet-base-v2}
   provider_id: inline_sentence-transformer
   model_type: embedding
 shields: []
@@ -119,8 +119,8 @@ shields: []
 vector_dbs:
 - metadata: {}
   vector_db_id: "aap-product-docs-2_5"
-  embedding_model: "all-MiniLM-L6-v2"
-  embedding_dimension: 384
+  embedding_model: ${env.EMBEDDING_MODEL:all-mpnet-base-v2}
+  embedding_dimension: 768
   provider_id: "aap_faiss"
 datasets: []
 scoring_fns: []
