Create a symlink for setting EMBEDDING_MODEL to ./embeddings_model (#18)
* Create a symlink for setting EMBEDDING_MODEL to ./embeddings_model
* Move the code to create a symlink to a separate script file
* Move the code to copy vector DB & embedding to a separate script file

--- a/ansible-chatbot-deploy.yaml
+++ b/ansible-chatbot-deploy.yaml
@@ -45,9 +45,9 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
           - name: LLAMA_STACK_CONFIG_DIR
-            value: /.llama/data/
+            value: /.llama/data
           - name: EMBEDDING_MODEL
-            value: /.llama/data/embeddings_model
+            value: ./embeddings_model
         envFrom:
           - configMapRef:
               name: "ansible-chatbot-server-env-properties"
@@ -59,51 +59,14 @@ spec:
       initContainers:
       - name: init-rag-vector-db
         image: quay.io/ansible/aap-rag-content:latest
-        command:
-        - /bin/bash
-        - -c
-        - |
-          echo "Initialize RAG vector database"
-          MOUNTPATH=/.llama/data
-          if [[ ! -d ${MOUNTPATH} ]]; then
-            echo "Volume mount path is not found."
-            exit 1
-          fi
-          DESTDIR=${MOUNTPATH}/distributions/ansible-chatbot
-          mkdir -p ${DESTDIR}
-          cd /rag/llama_stack_vector_db
-          diff faiss_store.db.gz.sha256 ${DESTDIR}/faiss_store.db.gz.sha256
-          if [[ $? != 0 ]]; then
-            gzip -cd faiss_store.db.gz > ${DESTDIR}/aap_faiss_store.db
-            if [[ $? != 0 ]]; then
-              echo "Failed to install new vector database file."
-              exit 1
-            fi
-            cp faiss_store.db.gz.sha256 ${DESTDIR}
-            echo "Latest vector database file has been installed."
-          else
-            echo "Latest vector database file already up-to-date and installed."
-          fi
-          ls -l ${DESTDIR}/aap_faiss_store.db
-          cat ${DESTDIR}/faiss_store.db.gz.sha256
-          echo "Initialize embedding model"
-          cd /rag
-          diff embeddings_model/config.json ${MOUNTPATH}/embeddings_model/config.json
-          if [[ $? != 0 ]]; then
-            rm -rf ${MOUNTPATH}/embeddings_model
-            cp -r embeddings_model ${MOUNTPATH}
-            if [[ $? != 0 ]]; then
-              echo "Failed to install embedding model."
-              exit 1
-            fi
-            echo "Latest embeddings model has been installed."
-          else
-            echo "Latest embeddings model already up-to-date and installed."
-          fi
-          cat ${MOUNTPATH}/embeddings_model/config.json
+        env:
+          - name: LLAMA_STACK_CONFIG_DIR
+            value: /.llama/data
         volumeMounts:
           - name: ansible-chatbot-storage
             mountPath: /.llama/data
+        command:
+          - /rag/entrypoint.sh
       volumes:
       - name: ansible-chatbot-storage
         persistentVolumeClaim:
