--- a/ansible-chatbot-build.yaml
+++ b/ansible-chatbot-build.yaml
@@ -38,6 +38,6 @@ image_type: container
 additional_pip_packages:
 - aiosqlite
 - sqlalchemy[asyncio]
-- numpy==2.2.6.
+- numpy==2.2.6
 
 external_providers_dir: ~/.llama/providers.d
