--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -4,6 +4,15 @@ resources:
 - ansible-chatbot-deploy.yaml
 namespace: ansible-chatbot-stack
 images:
-- name: ansible-chatbot
+- name: ansible-chatbot-stack
   newName: quay.io/ansible/ansible-chatbot-stack
-  newTag: 0.0.1
+  newTag: 0.0.2
+- name: ansible-mcp-gateway
+  newName: quay.io/ansible/ansible-mcp-gateway
+  newTag: 0.0.2
+- name: ansible-mcp-controller
+  newName: quay.io/ansible/ansible-mcp-controller
+  newTag: 0.0.2
+- name: ansible-mcp-lightspeed
+  newName: quay.io/ansible/ansible-mcp-lightspeed
+  newTag: 0.0.2
