--- a/ansible-chatbot-run.yaml
+++ b/ansible-chatbot-run.yaml
@@ -28,7 +28,7 @@ providers:
       kvstore:
         type: sqlite
         namespace: null
-        db_path: ${env.SQLITE_STORE_DIR:/.llama/data/distributions/ansible-chatbot}/aap_faiss_store.db
+        db_path: /.llama/data/distributions/ansible-chatbot/aap_faiss_store.db
   safety:
   - provider_id: llama-guard
     provider_type: inline::llama-guard
@@ -41,18 +41,14 @@ providers:
       persistence_store:
         type: sqlite
         namespace: null
-        db_path: ${env.SQLITE_STORE_DIR:/.llama/data/distributions/ansible-chatbot}/agents_store.db
+        db_path: /.llama/data/distributions/ansible-chatbot/agents_store.db
       responses_store:
         type: sqlite
         namespace: null
-        db_path: ${env.SQLITE_STORE_DIR:/.llama/data/distributions/ansible-chatbot}/responses_store.db
+        db_path: /.llama/data/distributions/ansible-chatbot/responses_store.db
       tools_filter:
         enabled: true
         model_id: ${env.INFERENCE_MODEL_FILTER:}
-      toolgroups:
-        - "mcp::aap-gateway"
-        - "mcp::aap-controller"
-        - "mcp::aap-lightspeed"
   datasetio:
   - provider_id: localfs
     provider_type: inline::localfs
@@ -60,14 +56,14 @@ providers:
       kvstore:
         type: sqlite
         namespace: null
-        db_path: ${env.SQLITE_STORE_DIR:/.llama/data/distributions/ansible-chatbot}/localfs_datasetio.db
+        db_path: /.llama/data/distributions/ansible-chatbot/localfs_datasetio.db
   telemetry:
   - provider_id: meta-reference
     provider_type: inline::meta-reference
     config:
       service_name: ${env.OTEL_SERVICE_NAME:}
       sinks: ${env.TELEMETRY_SINKS:console,sqlite}
-      sqlite_db_path: ${env.SQLITE_STORE_DIR:/.llama/data/distributions/ansible-chatbot}/trace_store.db
+      sqlite_db_path: /.llama/data/distributions/ansible-chatbot/trace_store.db
   tool_runtime:
   - provider_id: rag-runtime
     provider_type: inline::rag-runtime
@@ -84,32 +80,20 @@ models:
   provider_model_id: null
 - metadata:
     embedding_dimension: 768
-  model_id: ${env.EMBEDDING_MODEL:./embeddings_model}
+  model_id: ./embeddings_model
   provider_id: inline_sentence-transformer
   model_type: embedding
 shields: []
 vector_dbs:
 - metadata: {}
   vector_db_id: "aap-product-docs-2_5"
-  embedding_model: ${env.EMBEDDING_MODEL:./embeddings_model}
+  embedding_model: ./embeddings_model
   embedding_dimension: 768
   provider_id: "aap_faiss"
 datasets: []
 scoring_fns: []
 benchmarks: []
 tool_groups:
-  - toolgroup_id: "mcp::aap-gateway"
-    provider_id: lightspeed
-    mcp_endpoint:
-      uri: "http://127.0.0.1:8003/sse"
-  - toolgroup_id: "mcp::aap-controller"
-    provider_id: lightspeed
-    mcp_endpoint:
-      uri: "http://127.0.0.1:8004/sse"
-  - toolgroup_id: "mcp::aap-lightspeed"
-    provider_id: lightspeed
-    mcp_endpoint:
-      uri: "http://127.0.0.1:8005/sse"
   - toolgroup_id: builtin::rag
     provider_id: rag-runtime
 logging: null
