AAP-47676 use lightspeed-inline-agent (#34)
* AAP-47676 use lightspeed-inline-agent for tool filtering

Use lightspeed-inline-agent to allow tools filtering before actual llm prompt process.
issue: https://issues.redhat.com/browse/AAP-47676
agent :https://github.com/lightspeed-core/lightspeed-providers/tree/main/lightspeed_stack_providers/providers/inline/agents/lightspeed_inline_agent
when tools_filter is disabled behave like the llama-stack build in llama-stack default agent.

* add INFERENCE_MODEL_FILTER env for deployment.

--- a/ansible-chatbot-deploy.yaml
+++ b/ansible-chatbot-deploy.yaml
@@ -17,6 +17,7 @@ metadata:
 immutable: false
 data:
   INFERENCE_MODEL: "granite-3.3-8b-instruct"
+  INFERENCE_MODEL_FILTER: "granite-3.3-8b-instruct"
   # TODO: Use Secrets instead.
   VLLM_API_TOKEN: ""
   # TODO: Use Secrets instead.
