Remove AAP_GATEWAY_TOKEN env var

--- a/ansible-chatbot-run.yaml
+++ b/ansible-chatbot-run.yaml
@@ -70,8 +70,7 @@ providers:
     config: {}
   - provider_id: lightspeed
     provider_type: remote::lightspeed
-    config:
-      api_key: ${env.AAP_GATEWAY_TOKEN}
+    config: {}
 metadata_store: null
 models:
 - metadata: {}
