Fixing the clean - setup make procedure. (#51)

--- a/ansible-chatbot-build.yaml
+++ b/ansible-chatbot-build.yaml
@@ -26,4 +26,4 @@ additional_pip_packages:
 - sqlalchemy[asyncio]
 - numpy==2.2.6
 
-external_providers_dir: ~/.llama/providers.d
+external_providers_dir: ./llama-stack/providers.d
