Minor fixes to complete move to Python 3.12

--- a/lightspeed-stack/pyproject.toml
+++ b/lightspeed-stack/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ansible-chatbot-stack"
 version = "0.1.0"
-description = "Ansible Lightspeed Intelligent Assistant (LSIA)"
+description = "Ansible Lightspeed Intelligent Assistant (ALIA)"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
