--- a/lightspeed-stack/pyproject.toml
+++ b/lightspeed-stack/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "numpy==2.2.6",
     "opentelemetry-api~=1.34.1",
     "opentelemetry-exporter-otlp~=1.34.1",
+    "sentence-transformers>=5.0.0",
     "sqlalchemy~=2.0.41",
 ]
