--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -21,6 +21,9 @@ jobs:
       ANSIBLE_CHATBOT_VERSION: ${{ github.event.inputs.version }}
 
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Quay
         uses: docker/login-action@v3
         with:
