--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -52,6 +52,7 @@ jobs:
           file: Containerfile
           push: true
           tags: quay.io/ansible/ansible-chatbot-stack:latest,quay.io/ansible/ansible-chatbot-stack:${{ env.ANSIBLE_CHATBOT_VERSION }}
+          context: .
 
       - name: Create GitHub Repository Tag
         id: create_gh_repo_tag
