--- a/ansible-chatbot-run.yaml
+++ b/ansible-chatbot-run.yaml
@@ -28,7 +28,7 @@ providers:
       kvstore:
         type: sqlite
         namespace: null
-        db_path: /.llama/data/distributions/ansible-chatbot/aap_faiss_store.db
+        db_path: ${env.VECTOR_DB_DIR:/.llama/data/distributions/ansible-chatbot}/aap_faiss_store.db
   safety:
   - provider_id: llama-guard
     provider_type: inline::llama-guard
@@ -41,11 +41,11 @@ providers:
       persistence_store:
         type: sqlite
         namespace: null
-        db_path: /.llama/data/distributions/ansible-chatbot/agents_store.db
+        db_path: ${env.PROVIDERS_DB_DIR:/.llama/data/distributions/ansible-chatbot}/agents_store.db
       responses_store:
         type: sqlite
         namespace: null
-        db_path: /.llama/data/distributions/ansible-chatbot/responses_store.db
+        db_path: ${env.PROVIDERS_DB_DIR:/.llama/data/distributions/ansible-chatbot}/responses_store.db
       tools_filter:
         enabled: true
         model_id: ${env.INFERENCE_MODEL_FILTER:}
@@ -56,14 +56,14 @@ providers:
       kvstore:
         type: sqlite
         namespace: null
-        db_path: /.llama/data/distributions/ansible-chatbot/localfs_datasetio.db
+        db_path: ${env.PROVIDERS_DB_DIR:/.llama/data/distributions/ansible-chatbot}/localfs_datasetio.db
   telemetry:
   - provider_id: meta-reference
     provider_type: inline::meta-reference
     config:
       service_name: ${env.OTEL_SERVICE_NAME:}
       sinks: ${env.TELEMETRY_SINKS:console,sqlite}
-      sqlite_db_path: /.llama/data/distributions/ansible-chatbot/trace_store.db
+      sqlite_db_path: ${env.PROVIDERS_DB_DIR:/.llama/data/distributions/ansible-chatbot}/trace_store.db
   tool_runtime:
   - provider_id: rag-runtime
     provider_type: inline::rag-runtime
@@ -79,14 +79,14 @@ models:
   provider_model_id: null
 - metadata:
     embedding_dimension: 768
-  model_id: /.llama/data/distributions/ansible-chatbot/embeddings_model
+  model_id: ${env.EMBEDDINGS_MODEL:/.llama/data/distributions/ansible-chatbot/embeddings_model}
   provider_id: inline_sentence-transformer
   model_type: embedding
 shields: []
 vector_dbs:
 - metadata: {}
   vector_db_id: "aap-product-docs-2_5"
-  embedding_model: /.llama/data/distributions/ansible-chatbot/embeddings_model
+  embedding_model: ${env.EMBEDDINGS_MODEL:/.llama/data/distributions/ansible-chatbot/embeddings_model}
   embedding_dimension: 768
   provider_id: "aap_faiss"
 datasets: []
@@ -103,4 +103,4 @@ server:
   tls_cafile: null
   auth: null
   disable_ipv6: false
-external_providers_dir: /.llama/providers.d
+external_providers_dir: ${env.EXTERNAL_PROVIDERS_DIR:/.llama}/providers.d
