--- a/ansible-chatbot-run.yaml
+++ b/ansible-chatbot-run.yaml
@@ -103,4 +103,4 @@ server:
   tls_cafile: null
   auth: null
   disable_ipv6: false
-external_providers_dir: ${env.EXTERNAL_PROVIDERS_DIR:/.llama}/providers.d
+external_providers_dir: ${env.EXTERNAL_PROVIDERS_DIR:/.llama/providers.d}
