add mcp support and update paths (#73)
issue: https://issues.redhat.com/browse/AAP-50401
- add mcp support
- update paths
- Fixes llama-stack integration
Note this is a first step, more work to be done to update and fix the container for a right
dependency management with lightspeed-stack.

Signed-off-by: Djebran Lezzoum <ldjebran@gmail.com>

--- a/lightspeed-stack-mcp.yaml
+++ b/lightspeed-stack-mcp.yaml
@@ -14,3 +14,10 @@ user_data_collection:
   transcripts_disabled: true
 customization:
   system_prompt_path: /.llama/distributions/ansible-chatbot/system-prompts/default.txt
+mcp_servers:
+- name: mcp::aap-controller
+  provider_id: model-context-protocol
+  url: http://localhost:8004/sse
+- name: mcp::aap-lightspeed
+  provider_id: model-context-protocol
+  url: http://localhost:8005/sse
