--- a/ansible-chatbot-mcp-run.yaml
+++ b/ansible-chatbot-mcp-run.yaml
@@ -98,6 +98,14 @@ benchmarks: []
 tool_groups:
   - toolgroup_id: builtin::rag
     provider_id: rag-runtime
+  - toolgroup_id: mcp::aap-controller
+    provider_id: model-context-protocol
+    mcp_endpoint:
+      uri: http://localhost:8004/sse
+  - toolgroup_id: mcp::aap-lightspeed
+    provider_id: model-context-protocol
+    mcp_endpoint:
+      uri: http://localhost:8005/sse
 logging: null
 server:
   port: 8321
