--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "aiosqlite~=0.21.0",
     "faiss-cpu~=1.11.0",
     "fire~=0.7.0",
-    "lightspeed-stack-providers~=0.1.9",
+    "lightspeed-stack-providers~=0.1.10",
+    "llama-stack==0.2.14",
     "mcp~=1.9.4",
     "numpy==2.2.6",
     "opentelemetry-api~=1.34.1",
